--- a/index.html
+++ b/index.html
@@ -6,68 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <style>
-            #topo{
-                float: left;
-                width: 400 px;
-                height: 150 px;
-            }
-            div.container {
-                width: 100%;
-                border: 1px solid gray;
-            }
-
-            header{
-                padding: 1em;
-                color: white;
-                background-color: deepskyblue;
-                clear: left;
-                height: 150px;
-                text-align: center;
-                font-family: courier;
-            }
-
-            footer{
-                padding: 1em;
-                color: white;
-                background-color: deepskyblue;
-                clear: left;
-                text-align: center;
-                font-family: courier;
-            }
-            header #text02_h1{
-                font-family: fantasy;
-                float: right ;
-                font-size: 15px;
-            }
-
-            nav {
-                float: left;
-                max-width: 160px;
-                margin: 0;
-                padding: 1em;
-            }
-
-            nav ul {
-                list-style-type: none;
-                width: 130px;
-                text-align: left;
-                background-color: deepskyblue;
-                padding: 0;
-            }
-
-            nav ul a {
-                text-decoration: none;
-            }
-
-            article {
-                margin-left: 170px;
-                border-left: 1px solid gray;
-                padding: 1em;
-
-                overflow: hidden;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/layout.css"/>
+        <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
 
@@ -84,6 +24,8 @@
                 <li><a href="navegadores/navegadores.html">01. Navegadores</a></li>
                 <li><a href="FrontEnd1/tabelas.html">02. Tabelas </a></li>
                 <li><a href="javascript/exe01.html">03. Javascript</a></li>
+                <li><a href="navegadoresBotoes/navegadores.html">04. Navegadores com Botões</a></li>
+                <li><a href="CalendarioAtividades/index.html">05. Calendario de Atividades</a></li>
             </ul>
         </nav>
 
