--- a/navegadores/navegadores.html
+++ b/navegadores/navegadores.html
@@ -5,56 +5,13 @@
         <title>Navegadores</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            article{
-                position: absolute;
-                left: 35%;
-                margin: 20px;
-                border: 1px solid gray;
-                width: 400px;
-                height: 400px;
-                background: white;
-
-            }
-            article section{
-                margin-left:20px;
-            }
-
-            p{
-                color: blue;
-                font-size: 20px;
-                margin-left:20px;
-                font-size: 12px;
-            }
-            article h1{
-                text-align: center;
-            }
-            footer{
-                font-size: 12px;
-                text-align: right;
-                margin-right: 10px;
-                color: blue;
-            }
-            section{
-                margin: 20px;
-                background: #c2f8f9;
-            }
-            section b{
-                color: #a103c4;
-            }
-
-            body{
-                width: 800px;
-                height: 800px;
-                background: lightskyblue;
-            }
-
-        </style>
+        <link rel="stylesheet" type="text/css" href="../css/estilonavegadores1.css"/>
+        
     </head>
     <body>
 
         <article>
-            <h1>Comodo Dragon <img src="comodo.png" width="30px" /></h1>
+            <h1>Comodo Dragon <img src="../img/comodo.png" width="30px" /></h1>
             <section><font color="red"><b>Está disponível desde 2009.</b></font></section>
 
             <section><p><b>Comodo Dragon:</b> é um navegador de Internet, para Windows,<br> 
